--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,69 +1,22 @@
-# ===========================================
-# APPLICATION
-# ===========================================
-spring.application.name=code_crafters
-server.port=${SERVER_PORT:8080}
-spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
+# Configuración de la base de datos H2
+spring.datasource.url=jdbc:h2:mem:codehappen
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
 
-# ===========================================
-# DATABASE CONFIGURATION (H2 - Development)
-# ===========================================
-spring.datasource.url=${DB_URL:jdbc:h2:mem:codehappen}
-spring.datasource.username=${DB_USERNAME:sa}
-spring.datasource.password=${DB_PASSWORD:}
-spring.datasource.driver-class-name=org.h2.Driver
-
-# H2 Console
-spring.h2.console.enabled=${H2_CONSOLE_ENABLED:true}
-spring.h2.console.path=${H2_CONSOLE_PATH:/h2-console}
-
-# ===========================================
-# JPA/HIBERNATE
-# ===========================================
+# Configuración de JPA/Hibernate
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=${JPA_DDL_AUTO:create-drop}
-spring.jpa.show-sql=${JPA_SHOW_SQL:true}
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.defer-datasource-initialization=true
 
-# ===========================================
-# SQL INITIALIZATION
-# ===========================================
-spring.sql.init.mode=always
-spring.sql.init.continue-on-error=false
+# Consola H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
-# ===========================================
-# JWT CONFIGURATION
-# ===========================================
-jwt.secret=MySuperSecretKeyForJwtToken123456
-jwt.expiration=86400000
+# Puerto del servidor
+server.port=8080
 
-# ===========================================
-# CORS CONFIGURATION
-# ===========================================
-cors.allowed.origins=${CORS_ALLOWED_ORIGINS:http://localhost:3000,http://localhost:5173}
-
-# ===========================================
-# LOGGING
-# ===========================================
-logging.level.root=${LOG_LEVEL:INFO}
-logging.level.com.code_crafters.app=DEBUG
+# Logging
 logging.level.org.springframework.security=DEBUG
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-
-# ===========================================
-# FILE UPLOAD
-# ===========================================
-spring.servlet.multipart.enabled=true
-spring.servlet.multipart.max-file-size=${MAX_FILE_SIZE:5MB}
-spring.servlet.multipart.max-request-size=${MAX_REQUEST_SIZE:10MB}
-upload.dir=${UPLOAD_DIR:./uploads}
-
-# ===========================================
-# ERROR HANDLING
-# ===========================================
-server.error.include-message=always
-server.error.include-binding-errors=always
-server.error.include-stacktrace=on_param
-server.error.include-exception=false
+logging.level.com.code_crafters=DEBUG
